Fix issue with overflow trigger on actions bar

--- a/src/components/actions-tab/ActionsTab.module.css
+++ b/src/components/actions-tab/ActionsTab.module.css
@@ -82,13 +82,8 @@
   justify-content: center;
 }
 
-.menuKebabContainer {
-  width: 100%;
-  height: 100%;
-}
-
 .menuKebabContainer > div {
-  margin: 0px auto;
+  width: 100%;
 }
 
 .iconKebabHorizontalWrapper {
